# mt

./: README.md
code/: README.md
code/geom/: CMakeLists.txt  auxiliary.h  cplex.hpp  main.cpp
code/geom/aa/: ApproximateSolver.cpp  ApproximateSolver.h
code/geom/cmake/: FindCPLEX.cmake
code/geom/ip/: OptimalSolver.cpp  OptimalSolver.h
code/geom/visualization/: Visualization.cpp  Visualization.h
code/gridgraph/: CMakeLists.txt  cplex.hpp
code/gridgraph/fc/: base_solver.h  formulation_1.cpp  formulation_1.h  formulation_2.cpp  formulation_2.h  formulation_3.cpp  formulation_3.h  main.cpp
code/gridgraph/penalty/: base_solver.h  formulation_1.cpp  formulation_1.h  formulation_2.cpp  formulation_2.h  formulation_3.cpp  formulation_3.h  main.cpp
code/gridgraph/problem_instance/: distance_calculator.cpp  distance_calculator.h  grid_graph.cpp  grid_graph.h  instance_visualization.cpp  instance_visualization.h  main.cpp  random_instances.cpp  random_instances.h  save_and_load.cpp  save_and_load.h
code/gridgraph/subset/: base_solver.h  formulation_1.cpp  formulation_1.h  formulation_2.cpp  formulation_2.h  formulation_3.cpp  formulation_3.h  main.cpp
experiments/instances/geometric/: index.md
experiments/instances/geometric/fc/: geom_1000_0  geom_1000_1  geom_1000_2  geom_1000_3  geom_1000_4  geom_1000_5  geom_1000_6  geom_1000_7  geom_1000_8  geom_1000_9  geom_100_0  geom_100_1  geom_100_2  geom_100_3  geom_100_4  geom_100_5  geom_100_6  geom_100_7  geom_100_8  geom_100_9  geom_1050_0  geom_1050_1  geom_1050_2  geom_1050_3  geom_1050_4  geom_1050_5  geom_1050_6  geom_1050_7  geom_1050_8  geom_1050_9  geom_1100_0  geom_1100_1  geom_1100_2  geom_1100_3  geom_1100_4  geom_1100_5  geom_1100_6  geom_1100_7  geom_1100_8  geom_1100_9  (+360 more)
experiments/instances/gridgraph/: index.md
experiments/instances/gridgraph/fc/: fc_1000_dense_0.gg  fc_1000_dense_1.gg  fc_1000_dense_2.gg  fc_1000_dense_3.gg  fc_1000_dense_4.gg  fc_1000_sparse_0.gg  fc_1000_sparse_1.gg  fc_1000_sparse_2.gg  fc_1000_sparse_3.gg  fc_1000_sparse_4.gg  fc_100_dense_0.gg  fc_100_dense_1.gg  fc_100_dense_2.gg  fc_100_dense_3.gg  fc_100_dense_4.gg  fc_100_sparse_0.gg  fc_100_sparse_1.gg  fc_100_sparse_2.gg  fc_100_sparse_3.gg  fc_100_sparse_4.gg  fc_1100_dense_0.gg  fc_1100_dense_1.gg  fc_1100_dense_2.gg  fc_1100_dense_3.gg  fc_1100_dense_4.gg  fc_1100_sparse_0.gg  fc_1100_sparse_1.gg  fc_1100_sparse_2.gg  fc_1100_sparse_3.gg  fc_1100_sparse_4.gg  fc_1200_dense_0.gg  fc_1200_dense_1.gg  fc_1200_dense_2.gg  fc_1200_dense_3.gg  fc_1200_dense_4.gg  fc_1200_sparse_0.gg  fc_1200_sparse_1.gg  fc_1200_sparse_2.gg  fc_1200_sparse_3.gg  fc_1200_sparse_4.gg  (+249 more)
experiments/instances/gridgraph/pc/: p_1000_dense_0.gg  p_1000_dense_1.gg  p_1000_dense_2.gg  p_1000_dense_3.gg  p_1000_dense_4.gg  p_1000_sparse_0.gg  p_1000_sparse_1.gg  p_1000_sparse_2.gg  p_1000_sparse_3.gg  p_1000_sparse_4.gg  p_100_dense_0.gg  p_100_dense_1.gg  p_100_dense_2.gg  p_100_dense_3.gg  p_100_dense_4.gg  p_100_sparse_0.gg  p_100_sparse_1.gg  p_100_sparse_2.gg  p_100_sparse_3.gg  p_100_sparse_4.gg  p_1100_dense_0.gg  p_1100_dense_1.gg  p_1100_dense_2.gg  p_1100_dense_3.gg  p_1100_dense_4.gg  p_1100_sparse_0.gg  p_1100_sparse_1.gg  p_1100_sparse_2.gg  p_1100_sparse_3.gg  p_1100_sparse_4.gg  p_1200_dense_0.gg  p_1200_dense_1.gg  p_1200_dense_2.gg  p_1200_dense_3.gg  p_1200_dense_4.gg  p_1200_sparse_0.gg  p_1200_sparse_1.gg  p_1200_sparse_2.gg  p_1200_sparse_3.gg  p_1200_sparse_4.gg  (+100 more)
experiments/instances/gridgraph/sc/: s_1000_dense_0.gg  s_1000_dense_1.gg  s_1000_dense_2.gg  s_1000_dense_3.gg  s_1000_dense_4.gg  s_1000_sparse_0.gg  s_1000_sparse_1.gg  s_1000_sparse_2.gg  s_1000_sparse_3.gg  (+131 more)
experiments/results/geometric/: index.md  results_apx_2_1_0.csv  results_apx_2_1_05.csv  results_apx_3_1_0.csv  results_apx_4_1_0.csv  results_apx_runtime.csv  results_opt_2_1_0.csv  results_opt_2_1_05.csv  results_opt_3_1_0.csv  results_opt_4_1_0.csv
experiments/results/gridgraph/: fc.csv  index.md  pc.csv  sc.csv
